Basic running skeleton

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=sms
 
-
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.datasource.url=jdbc:h2:mem:sms
 spring.datasource.driverClassName=org.h2.Driver
@@ -73,3 +74,19 @@ activemq.broker.url=tcp://localhost:61616
 
 
 #https://javatute.com/spring-boot/spring-boot-jms-activemq-producer-and-consumer-example/
+
+
+# File Poller properties
+inbound.failed.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\failed
+inbound.file.poller.fixed.delay=1000
+inbound.file.poller.max.messages.per.poll=5
+inbound.file.poller.thread.pool.size=4
+inbound.filename.regex=([^\s]+(\.(?i)(csv))$)
+inbound.out.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\out
+inbound.processed.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\processed
+out.filename.dateFormat=yyyy_MM_dd_HH_mm_ss_SSS
+out.filename.suffix=.csv
+
+inbound.read.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\read
+
+#C:/Users/Santosh Kumar/IdeaProjects/payment/src/main/resources
