--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -90,3 +90,10 @@ out.filename.suffix=.csv
 inbound.read.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\read
 
 #C:/Users/Santosh Kumar/IdeaProjects/payment/src/main/resources
+
+
+regulatory.authorities.uri="http://localhost:9091/regulatoryAuthorities/country/japan"
+
+sms.file.reader.cron =0 0/2 * ? * *
+
+address-service.base.url=http://localhost:9091/regulatoryAuthorities/country/india
