--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,12 +82,12 @@ inbound.file.poller.fixed.delay=1000
 inbound.file.poller.max.messages.per.poll=5
 inbound.file.poller.thread.pool.size=4
 inbound.filename.regex=([^\s]+(\.(?i)(csv))$)
-inbound.out.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\out
+inbound.out.path=C:\Users\Santosh Kumar\Downloads\spring-file-poller-main\inb\out
 inbound.processed.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\processed
 out.filename.dateFormat=yyyy_MM_dd_HH_mm_ss_SSS
 out.filename.suffix=.csv
 
-inbound.read.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\read
+inbound.read.path=C:\Users\Santosh Kumar\Downloads\spring-file-poller-main\inb\read
 
 #C:/Users/Santosh Kumar/IdeaProjects/payment/src/main/resources
 
