--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,88 +12,17 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #enabling the H2 console
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-
-
-
 spring.jpa.hibernate.hbm2ddl.auto=none
-
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#
-#
-##spring.datasource.url=jdbc:h2:file:/data/demo
-#
-#spring.jpa.defer-datasource-initialization=true
-#
-#spring.h2.console.enabled=true
-#
-#
-#spring.h2.console.path=/h2-console
-#spring.h2.console.settings.trace=false
-#spring.h2.console.settings.web-allow-others=false
-
-#DROP TABLE IF EXISTS CITY;
-#CREATE TABLE TRADE (
-#id INT AUTO_INCREMENT  PRIMARY KEY,
-#First_name VARCHAR(50) NOT NULL,
-#Last_Name VARCHAR(50) NOT NULL,
-#Nationality VARCHAR(2) NOT NULL,
-#Country_of_Residence VARCHAR(2) NOT NULL,
-#date_of_birth VARCHAR(20) NOT NULL,
-#Unique_Trader_id VARCHAR(10) NOT NULL,
-#Amount INT NOT NULL,
-#currency VARCHAR(3) NOT NULL,
-#unique_Stock_ID VARCHAR(10) NOT NULL,
-#Buy_or_Sell VARCHAR(3) NOT NULL
-#);
-
-#working json
-#{
-#"first_name": "santosh",
-#"last_Name": "kumar",
-#"nationality": "IN",
-#"country_of_Residence": "IN",
-#"date_of_birth": "30/11/1990",
-#"Unique_Trader_id": "21",
-#"amount": "10000",
-#"currency": "INR",
-#"unique_Stock_ID": "ITC0001",
-#"buy_or_Sell": "BUY"
-#}
-
-
-#https://www.youtube.com/watch?v=WiLCuMeBp3c
-
-
 server.port = 9091
+
+#Active MQ URL
 activemq.broker.url=tcp://localhost:61616
 
-
-#https://javatute.com/spring-boot/spring-boot-jms-activemq-producer-and-consumer-example/
-
-
-# File Poller properties
-inbound.failed.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\failed
-inbound.file.poller.fixed.delay=1000
-inbound.file.poller.max.messages.per.poll=5
-inbound.file.poller.thread.pool.size=4
-inbound.filename.regex=([^\s]+(\.(?i)(csv))$)
-inbound.out.path=C:\Users\Santosh Kumar\Downloads\spring-file-poller-main\inb\out
-inbound.processed.path=C:\Users\Santosh Kumar\IdeaProjects\Payment\inbound\processed
-out.filename.dateFormat=yyyy_MM_dd_HH_mm_ss_SSS
-out.filename.suffix=.csv
-
-inbound.read.path=C:\Users\Santosh Kumar\Downloads\spring-file-poller-main\inb\read
-
-#C:/Users/Santosh Kumar/IdeaProjects/payment/src/main/resources
-
-
-regulatory.authorities.uri="http://localhost:9091/regulatoryAuthorities/country/japan"
-
-sms.file.reader.cron =0 0/2 * ? * *
+#Regulatory Service URLS
 
 address-service.base.url=http://localhost:9091/regulatoryAuthorities/country/india
+
+address-service.base.url.japan="http://localhost:9091/regulatoryAuthorities/country/japan"
+
+#Cron Job Timings
+sms.file.reader.cron =0 0/2 * ? * *
